# spark-tensorflow

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  setup.cfg
notebooks/: Dask-resnet.ipynb  Dask-resnet.md  dask_utils.py
